include_geo_sim_sdk()
link_geo_sim_sdk()

set(CMAKE_DEBUG_POSTFIX "d")
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)

find_package(Boost 1.42 COMPONENTS filesystem system serialization date_time)

add_subdirectory(common)
#add_subdirectory(utils)
#add_subdirectory(spherical_harmonics)
#add_subdirectory(hex_frame_opt)
#add_subdirectory(hex_ui)
add_subdirectory(tetmesh)
add_subdirectory(hex_param)
#add_subdirectory(fast_marching)
#add_subdirectory(test)
# add_subdirectory(console)
# add_subdirectory(trimesh)
add_subdirectory(quadmesh)
#add_subdirectory(construct_param)
add_subdirectory(hexmesh)
#add_subdirectory(hex_process)
#add_subdirectory(try)
add_subdirectory(numeric)
#add_subdirectory(tetmesh_refine)
add_subdirectory(tet_mesh_sxx)
#add_subdirectory(hex_viewer)
#add_subdirectory(render_tool)
#add_subdirectory(gtk_gui)
#add_subdirectory(map_hex_to_tet)
#add_subdirectory(cut_hex_to_tet)
#add_subdirectory(visualization_tet)
add_subdirectory(polycube)
add_subdirectory(polycube_postprocess)
add_subdirectory(foldfree)
#add_subdirectory(surface_L1)
# add_subdirectory(deformer)
add_subdirectory(equation_graph)
add_subdirectory(vol_param)
add_subdirectory(hex_extractor)
#add_subdirectory(crane_fairing)
add_subdirectory(mesh_func)
